<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonGray"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="Clear"
        android:layout_above="@+id/saveAccomodation"
        android:layout_alignLeft="@+id/saveAccomodation"
        android:layout_alignStart="@+id/saveAccomodation" />

    <Button
        android:id="@+id/saveAccomodation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_centerVertical="true"
        android:text="Save"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <!--   android:onClick="startActivity"
     android:text="@string/start_activity"  -->


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.durga.hackathon.Emergency" />

    <Button
        android:id="@+id/getAccomodation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_below="@+id/saveAccomodation"
        android:layout_alignParentRight="true"
        android:text="Show"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/deleteAccomodation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_below="@+id/getAccomodation"
        android:text="Delete"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/stopAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/stop_alarm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/deleteAccomodation" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter your Resuce Type"
        android:id="@+id/name"
        android:layout_above="@+id/rgName"
        android:layout_alignLeft="@+id/rgName"
        android:layout_alignStart="@+id/rgName" />

    <RadioGroup
        android:id="@+id/rgName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clear"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/police"
            android:id="@+id/radioButton_police"
            android:layout_below="@+id/name"
            android:layout_alignLeft="@+id/name"
            android:layout_alignStart="@+id/name" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fire_service"
            android:id="@+id/radioButton_fire"
            android:layout_below="@+id/radioButton_police"
            android:layout_alignLeft="@+id/name"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lifeboat_service"
            android:id="@+id/radioButton_lifeboat"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambulance_service"
            android:id="@+id/radioButton_ambulance"
            android:checked="false"
            android:layout_gravity="right" />
    </RadioGroup>


</RelativeLayout>
